# verisocks

./: .gitignore  .gitmodules  LICENSE  Makefile  Makefile.in  README.md  TODO.md  configure  configure.ac  vsl.mk
.github/workflows/: builddocs.yml  buildpackage.yml  makefile.yml  testdocs.yml  testpackage.yml
docs/: Doxyfile  Makefile  conf.py  doxygen.mk  index.rst
docs/diagrams/: Makefile  architecture.puml  verisocks_architecture.puml  verisocks_architecture_vsl.puml  verisocks_exec_focus.puml
docs/src/: architecture.rst  examples.rst  intro.rst  python_client.rst  release_notes.rst  tcp_protocol.rst  verilator_integ.rst  vsl_api.rst  vsl_examples.rst  vsl_wizard.rst
examples/hello_world/: README.md  hello_world_tb.v  test_hello_world.py
examples/spi_master/: .gitignore  README.md  spi_master.py  spi_master.v  spi_master_tb.v  spi_slave.v  test_main.cpp  test_spi_master.py
examples/vsl_counter/: .gitignore  Makefile  config.yaml  counter.v  pytest.ini  test_counter.py  test_main.cpp  variables.vlt
include/: verisocks.h  vpi_config.h.in  vs_logging.h  vs_msg.h  vs_server.h  vs_utils.h  vs_vpi.h  vsl.h  vsl_integ.h  vsl_integ.hpp  vsl_integ_cmd.h  vsl_integ_cmd.hpp  vsl_integ_cmd_get.hpp  vsl_signals_notes.md
include/vs_logging/: vs_logging_no_va.h  vs_logging_va.h
include/vsl/: vsl.mk  vsl_clocks.hpp  vsl_dump.hpp  vsl_integ.hpp  vsl_integ_cmd.hpp  vsl_integ_cmd_get.hpp  vsl_integ_cmd_run.hpp  vsl_integ_cmd_set.hpp  vsl_macros.hpp  vsl_signals_notes.md  vsl_types.hpp  vsl_utils.hpp
python/: README.md  pip_requirements.txt  setup.cfg
python/test/: test_0.v  test_verisocks.py
python/test/vsl/: .gitignore  Makefile  config.yaml  test_main.cpp  test_verisocks_vsl.py  test_vsl.cpp  test_vsl.vlt  variables.vlt
python/verisocks/: __init__.py  utils.py  verisocks.py
python/verisocks/cli/: __init__.py  wizard.py
python/verisocks/cli/templates/: Makefile.mako  Makefile_top.mako  test_main.cpp.mako  variables.vlt.mako
src/: verisocks.c  verisocks_startup.c  vs_msg.c  vs_server.c  vs_utils.c  vs_vpi.c  vs_vpi_get.c  vs_vpi_run.c  vsl_clocks.cpp  vsl_integ.cpp  vsl_integ_cmd.cpp  vsl_types.cpp  vsl_utils.cpp
templates/: Makefile.mako  test_main.cpp.mako
test/: HOWTO_CUnit_xml.md  Makefile  README.md  cunit_test.c  test_vs_msg.c  test_vs_server.c
test/src/: cunit_test.c  test_vs_msg.c  test_vs_server.c
(+16 files in other folders)
