[metadata]
name = verisocks
version = attr: verisocks.__version__
description = Python client to communicate with Verisocks server.
long_description = file: README.md
license = MIT
author = jchabloz
url = https://github.com/jchabloz/verisocks

[options]
install_requires =
    enum34;python_version<"3.4"
