[metadata]
name = verisocks
version = attr: verisocks.__version__
description = Python client to communicate with Verisocks server.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = jchabloz
url = https://github.com/jchabloz/verisocks

[options]
include_package_data = True
packages = find:
install_requires =
    enum34;python_version<"3.4"
    Mako >= 1.0.0
    PyYAML >= 5.0.0

[options.package_data]
* = *.Mako

[options.entry_points]
console_scripts =
    vsl-wizard = verisocks.cli.wizard:main
